Replaced the minpasses object with a minpasses TeX button, which is easier to edit

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -309,7 +309,8 @@ fontcolor {
 
 /* paragraph indenting rule -- don't indent the first paragraph in a division */
 bodyText {
-  margin-bottom: 0 
+  margin-bottom: 0;
+  line-height: 1.3em; 
 }
 
 /* ... but indent the following paragraphs */
