Extended Ron's css rule for breakobj:before to msibreak:before, which the object that is actually used

--- a/prince/res/css/latex_internal.css
+++ b/prince/res/css/latex_internal.css
@@ -95,7 +95,7 @@ breakobj {
   white-space: pre;
 }
 
-*[showinvis="true"] breakobj:before {
+*[showinvis="true"] breakobj:before, *[showinvis="true"] msibreak:before {
   color: green;
   content: attr(invisDisplay);
 }
