--- a/toolkit/themes/pinstripe/global/dropmarker.css
+++ b/toolkit/themes/pinstripe/global/dropmarker.css
@@ -1,5 +1,6 @@
 dropmarker {
   -moz-appearance: menulist-button;
+  cursor: pointer;
   width: 16px;
   -moz-box-align: center;
   -moz-box-pack: center;
