Bug 1401 -- noindent object not showing when showInvisibles is selected.

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -140,6 +140,18 @@ body[showinvis="true"] hspace {
   border-bottom: thin solid;
 }
 
+body[showinvis="true"] hspace[type="noIndent"]:before {
+  border-bottom-style: none;
+  content: "☒";
+}
+
+body[showinvis="true"] hspace[type="noIndent"] {
+  position: relative;
+  left: -2.5em;
+  width: 0;
+  border-bottom-style: none;
+}
+
 hspace[type="emSpace"] {
   min-width: 1em;
 }
