Fixed glitch in display of xref buttons

--- a/prince/res/css/baselatex.css
+++ b/prince/res/css/baselatex.css
@@ -145,8 +145,8 @@ latexstyleb {
 
 xref {
   content: attr(key);
-  -moz-appearance: button;
-}
+/*  -moz-appearance: button;
+*/}
 
 requestimplementation {
   -moz-appearance: button;
