Reserved F3 key (bug 2482)

--- a/prince/res/xml/keytables.xml
+++ b/prince/res/xml/keytables.xml
@@ -9,15 +9,16 @@
   <keytable id="FKeys" name="FKeys" keycount="20" keytype="script">
     <key name="F1" vk="1" reserved="1"/>
     <key name="F4" alt="1"  vk="1" reserved="1"/>
-	  <key name="F10" vk="1" reserved="1"/>
-	  <key name="F3" vk="1" >insertParaTag('para',false);</key>
-	  <key name="F4" vk="1" >toggleTextTag('(normal)',false);</key>
-	  <key name="F5" vk="1" >toggleTextTag('bold',false);</key>
-	  <key name="F6" vk="1" >toggleTextTag('em',false);</key>
-	  <key name="F9" vk="1" >toggleTextTag('tt',false);</key>
-	  <key name="F11" vk="1" >insertSectionTag('section',false);</key>
-	  <key name="F12" vk="1" >insertSectionTag('subsection',false);</key>
-	  <key name="F12" alt="1" vk="1" >dumpMath();</key>
+    <key name="F3" vk="1" reserved="1" />
+    <key name="F3" vk="1" reserved="1" shift="1"/>
+	<key name="F10" vk="1" reserved="1"/>
+	<key name="F4" vk="1" >toggleTextTag('(normal)',false);</key>
+	<key name="F5" vk="1" >toggleTextTag('bold',false);</key>
+	<key name="F6" vk="1" >toggleTextTag('em',false);</key>
+	<key name="F9" vk="1" >toggleTextTag('tt',false);</key>
+	<key name="F11" vk="1" >insertSectionTag('section',false);</key>
+	<key name="F12" vk="1" >insertSectionTag('subsection',false);</key>
+	<key name="F12" alt="1" vk="1" >dumpMath();</key>
     <key name="F11" alt="1" vk="1" >softSave();</key>
   </keytable>
 
